// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryButton should render selected 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "",
      "borderRadius": 8,
      "height": 50,
      "justifyContent": "center",
      "marginRight": 8,
      "opacity": 1,
    }
  }
>
  <Text
    selected={true}
    style={
      Array [
        Object {
          "color": "",
          "marginLeft": 8,
          "marginRight": 8,
          "textAlign": "center",
          "textTransform": "capitalize",
        },
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`CategoryButton should render selected false  1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "",
      "borderRadius": 8,
      "height": 50,
      "justifyContent": "center",
      "marginRight": 8,
      "opacity": 1,
    }
  }
>
  <Text
    selected={false}
    style={
      Array [
        Object {
          "color": "",
          "marginLeft": 8,
          "marginRight": 8,
          "textAlign": "center",
          "textTransform": "capitalize",
        },
      ]
    }
  >
    test
  </Text>
</View>
`;
